--- a/lilypad_module.json.tmpl
+++ b/lilypad_module.json.tmpl
@@ -13,7 +13,7 @@
       },
       "Docker": {
         "EnvironmentVariables": [],
-        "Image": "sha256/4b01e042ea55c6b498a585eef8d59962608693b6f4d69da0b3ea0374b45ec761"
+        "Image": "sha256/4b01e042ea55c6b498a585eef8d59962608693b6f4d69da0b3ea0374b45ec761:latest"
       },
       "Engine": "Docker",
       "Network": {
