--- a/lilypad_module.json.tmpl
+++ b/lilypad_module.json.tmpl
@@ -13,7 +13,7 @@
       },
       "Docker": {
         "EnvironmentVariables": [],
-        "Image": "test:latest"
+        "Image": "test"
       },
       "Engine": "Docker",
       "Network": {
